# syrinx

./: .coverage  .gitignore  Cargo.toml  MULTIPLATPLAN.md  README.md
.cargo/: audit.toml
.github/workflows/: ci.yml  release.yml
app/: Cargo.toml  build.rs
app/src/: capture_win.rs  dictation_win.rs  engine_proc.rs  main.rs
app/ui/: main.slint  theme.slint
app/ui/fonts/: LICENSE.md
dictate/: Cargo.toml
dictate/src/: main.rs  pill.rs
docs/: ARCHITECTURE.md  HARDWARE.md  RPC-PROTOCOL.md
engine/: pyproject.toml  setup-seedvc.ps1  setup-seedvc.sh  setup-vevo.ps1  setup-vevo.sh
engine/syrinx_engine/: __init__.py  __main__.py  audio.py  chunking.py  core.py  dac_shim.py  effects.py  history.py  llm.py  luxtts_worker.py  models.py  paths.py  profiles.py  recording.py  rpc.py  seedvc_worker.py  service.py  settings.py  stt.py  tts.py  vevo_worker.py
engine/syrinx_engine/backends/: __init__.py  chatterbox.py  chatterbox_vc.py  kokoro.py  luxtts.py  qwen.py  seed_vc.py  tada.py  vevo.py
engine/tests/: _contract.py  conftest.py  test_audio.py  test_audio_playback.py  test_backend_windows.py  test_chunking.py  test_contract.py  test_effects.py  test_history.py  test_models.py  test_paths.py  test_profiles.py  test_recording.py  test_rpc.py  test_seedvc_worker.py  test_service.py  test_service_flows.py  test_settings.py  test_setup_pins.py  test_supervise.py
engine/tests/stubs/librosa/: __init__.py
engine/tests/stubs/seed_vc/: __init__.py  api.py
engine/tests/stubs/seed_vc/Models/: audio.py
engine/tests/stubs/torch/: __init__.py
mcp/: README.md
packaging/: PKGBUILD  WINDOWS.md  hyprland.conf  sh.syrinx.Engine.service.in  syrinx-engine.service  syrinx-engine.service.in  syrinx.desktop.in
packaging/windows/: syrinx-firstrun.ps1  syrinx-launch.vbs  syrinx.nsi
scripts/: build-windows.ps1  install.sh  test.sh
shared/: Cargo.toml
shared/examples/: rpc_smoke.rs
shared/src/: client.rs  dbus_client.rs  error.rs  event.rs  lib.rs  rpc_client.rs
shared/tests/: rpc_contract.rs
