[package]
name = "syrinx-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
slint = "1.8"
syrinx-shared.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { workspace = true, features = ["process", "time"] }
# avatar thumbnails: decode + crop + high-quality downscale (the GPU's plain
# bilinear sampling pixelates 4K photos squeezed into small circles)
image = "0.25"
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rfd = { version = "0.15", default-features = false, features = ["xdg-portal", "async-std"] }

[build-dependencies]
slint-build = "1.8"
