[package]
name = "syrinx-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
slint = "1.8"
syrinx-shared.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { workspace = true, features = ["process", "time"] }
# per-OS config/data dirs — mirrors shared's discovery-path derivation (§2.2)
dirs.workspace = true
# avatar thumbnails: decode + crop + high-quality downscale (the GPU's plain
# bilinear sampling pixelates 4K photos squeezed into small circles)
image = "0.25"
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rfd = { version = "0.15", default-features = false, features = ["xdg-portal", "async-std"] }

[build-dependencies]
slint-build = "1.8"

# The engine-supervisor tests (Win/mac only) drive the real connect path
# against an in-process fake WS engine and spawn stub children.
[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "sync", "time", "process"] }
tokio-tungstenite.workspace = true
futures-util.workspace = true
