[package]
name = "syrinx-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# unstable-fontique-010: run-time font registration + script fallback, used to
# bundle a symbol fallback font on non-Linux (Linux keeps fontconfig). This API
# is only present from slint 1.17, hence the bumped floor.
slint = { version = "1.17", features = ["unstable-fontique-010"] }
syrinx-shared.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { workspace = true, features = ["process", "time"] }
# per-OS config/data dirs — mirrors shared's discovery-path derivation (§2.2)
dirs.workspace = true
# avatar thumbnails: decode + crop + high-quality downscale (the GPU's plain
# bilinear sampling pixelates 4K photos squeezed into small circles)
image = "0.25"
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rfd = { version = "0.15", default-features = false, features = ["xdg-portal", "async-std"] }

[build-dependencies]
slint-build = "1.8"

# The engine-supervisor tests (Win/mac only) drive the real connect path
# against an in-process fake WS engine and spawn stub children.
[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "sync", "time", "process"] }
tokio-tungstenite.workspace = true
futures-util.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_Media_Audio", "Win32_Media_KernelStreaming", "Win32_Media_Multimedia", "Win32_System_Com", "Win32_System_Com_StructuredStorage", "Win32_System_Variant", "Win32_UI_Shell_PropertiesSystem", "Win32_Devices_FunctionDiscovery", "Win32_System_Threading", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging", "Win32_System_DataExchange", "Win32_System_Memory", "Win32_System_Ole", "Win32_System_LibraryLoader"] }
