[package]
name = "syrinx-dictate"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "syrinx-dictate"
path = "src/main.rs"

[[bin]]
name = "syrinx-dictate-pill"
path = "src/pill.rs"

[dependencies]
syrinx-shared.workspace = true
zbus.workspace = true
tokio = { workspace = true, features = ["time"] }
anyhow.workspace = true
futures-util = "0.3"
tracing.workspace = true
tracing-subscriber.workspace = true
# The wlr-layer-shell overlay ("the pill"). Only the syrinx-dictate-pill bin
# uses these; the toggle bin stays lean.
gtk4 = "0.9"
gtk4-layer-shell = "0.5"
