[project]
name = "syrinx-engine"
version = "0.1.0"
description = "Syrinx ML engine — Qwen3-TTS + whisper.cpp, exposed on D-Bus"
requires-python = ">=3.11"
dependencies = [
    "dbus-next>=0.2.3",   # async D-Bus service
    "numpy",
    "sounddevice",        # PipeWire capture/playback
    "soundfile",          # audio I/O
    # TTS: Kokoro-82M (pulls torch + misaki G2P). CPU-realtime; on the 4090
    # desktop torch auto-uses CUDA. Heavier cloning engines (Qwen3-TTS/LuxTTS)
    # will be added later as optional extras.
    "kokoro>=0.9.2",
    "misaki[en]",         # English G2P for Kokoro
]

[project.optional-dependencies]
# The beefy zero-shot voice-cloning engine — install on GPU boxes (the 4090):
#   pip install -e 'engine[qwen]'
qwen = [
    "qwen-tts>=0.0.5",
    "transformers>=4.36.0",
]

[project.scripts]
syrinx-engine = "syrinx_engine.__main__:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
