[project]
name = "syrinx-engine"
version = "0.1.0"
description = "Syrinx ML engine — Qwen3-TTS + whisper.cpp, exposed on D-Bus"
requires-python = ">=3.11"
dependencies = [
    "dbus-next>=0.2.3",   # async D-Bus service
    "numpy",
    "sounddevice",        # PipeWire capture/playback
    "soundfile",          # audio I/O
    # TTS: Kokoro-82M (pulls torch + misaki G2P). CPU-realtime; on the 4090
    # desktop torch auto-uses CUDA. Heavier cloning engines (Qwen3-TTS/LuxTTS)
    # will be added later as optional extras.
    "kokoro>=0.9.2",
    "misaki[en]",         # English G2P for Kokoro
    "faster-whisper",     # STT for dictation (CTranslate2 — CPU-fast, CUDA on the 4090)
    "pedalboard",         # post-processing effects (Voicebox-parity presets)
]

[project.optional-dependencies]
# The beefy zero-shot voice-cloning engine — install on GPU boxes (the 4090):
#   pip install -e 'engine[qwen]'
qwen = [
    "qwen-tts>=0.0.5",
    "transformers>=4.36.0",
]

# Chatterbox sub-dependencies. chatterbox-tts itself pins numpy<1.26 /
# torch==2.6 / transformers==4.46.3 (all stale; runs fine on the modern
# stack), so install it SEPARATELY with --no-deps:
#   pip install -e 'engine[chatterbox]' && pip install chatterbox-tts --no-deps
chatterbox = [
    "conformer>=0.3.2",
    "diffusers>=0.29.0",
    "omegaconf",
    "pykakasi",
    "resemble-perth>=1.0.1",
    "s3tokenizer",
    "spacy-pkuseg",
    "pyloudnorm",
    # resemble-perth still imports pkg_resources at runtime; setuptools>=81
    # removed it and the watermarker silently degrades to None
    "setuptools<81",
]

# TADA needs no extra sub-deps beyond the main stack (dac_shim.py replaces
# descript-audio-codec), but hume-tada itself pins torch>=2.7,<2.8 (stale),
# so install it SEPARATELY with --no-deps:
#   pip install hume-tada --no-deps

[project.scripts]
syrinx-engine = "syrinx_engine.__main__:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
