[project]
name = "syrinx-engine"
version = "0.1.0"
description = "Syrinx ML engine — Qwen3-TTS + whisper.cpp, exposed on D-Bus"
requires-python = ">=3.11"
dependencies = [
    "dbus-next>=0.2.3",   # async D-Bus service
    "numpy",
    "sounddevice",        # PipeWire capture/playback
    "soundfile",          # audio I/O
    # TTS: Kokoro-82M (pulls torch + misaki G2P). CPU-realtime; on the 4090
    # desktop torch auto-uses CUDA. Heavier cloning engines (Qwen3-TTS/LuxTTS)
    # will be added later as optional extras.
    "kokoro>=0.9.2",
    "misaki[en]",         # English G2P for Kokoro
    "faster-whisper",     # STT for dictation (CTranslate2 — CPU-fast, CUDA on the 4090)
    "pedalboard",         # post-processing effects (Voicebox-parity presets)
]

[project.optional-dependencies]
# The beefy zero-shot voice-cloning engine — install on GPU boxes (the 4090):
#   pip install -e 'engine[qwen]'
qwen = [
    "qwen-tts>=0.0.5",
    "transformers>=4.36.0",
]

# Chatterbox sub-dependencies. chatterbox-tts itself pins numpy<1.26 /
# torch==2.6 / transformers==4.46.3 (all stale; runs fine on the modern
# stack), so install it SEPARATELY with --no-deps:
#   pip install -e 'engine[chatterbox]' && pip install chatterbox-tts --no-deps
chatterbox = [
    "conformer>=0.3.2",
    "diffusers>=0.29.0",
    "omegaconf",
    "pykakasi",
    "resemble-perth>=1.0.1",
    "s3tokenizer",
    "spacy-pkuseg",
    "pyloudnorm",
    # resemble-perth still imports pkg_resources at runtime; setuptools>=81
    # removed it and the watermarker silently degrades to None
    "setuptools<81",
]

# TADA needs no extra sub-deps beyond the main stack (dac_shim.py replaces
# descript-audio-codec), but hume-tada itself pins torch>=2.7,<2.8 (stale),
# so install it SEPARATELY with --no-deps:
#   pip install hume-tada --no-deps

[project.scripts]
syrinx-engine = "syrinx_engine.__main__:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["syrinx_engine"]
# The ML-inference layer is excluded on purpose: loading these needs torch /
# kokoro / faster-whisper / seed-vc, none of which are in the CI dependency
# contract (numpy + soundfile + dbus-next + pytest). They are verified by
# live GPU runs on the 4090 box, not here. Everything else — service, stores,
# chunking, effects, audio, settings, models — stays measured.
omit = [
    "*/backends/*",
    "*/tts.py",
    "*/stt.py",
    "*/llm.py",
    "*/luxtts_worker.py",
    "*/seedvc_worker.py",
    "*/vevo_worker.py",
    "*/dac_shim.py",
    "*/__main__.py",
]

[tool.coverage.report]
# measured 96.6% on the CI dependency set; two points of slack so a small
# refactor doesn't fail the build before anyone has touched a test
fail_under = 94

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
# ruff's documented default rule set, pinned. Left implicit, ruff 0.16 turns on
# ~400 rules (S110 on every guarded except-pass, ASYNC230 on the workers' file
# I/O, …) — a source-wide refactor, not a lint gate. Pinning keeps a ruff
# upgrade from silently widening the build's definition of "clean".
select = ["E4", "E7", "E9", "F"]
