[package]
name = "syrinx-shared"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
futures-util.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "sync"] }
tokio-tungstenite.workspace = true
dirs.workspace = true

# D-Bus is the Linux-only transport; the crate must still compile on Win/mac.
[target.'cfg(unix)'.dependencies]
zbus.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "net", "time"] }
