[package]
name = "syrinx-shared"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
futures-util.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "sync"] }
tokio-tungstenite.workspace = true
dirs.workspace = true

# D-Bus is the Linux-only transport; the crate must still compile on Win/mac.
# Keyed on `target_os = "linux"`, not `unix`: macOS is a unix but rides the
# RPC transport (MULTIPLATPLAN §1.2), so it must not pull in zbus either.
[target.'cfg(target_os = "linux")'.dependencies]
zbus.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "net", "time"] }
